--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <div id="map"></div>
+    <script>
+     function initMap() {
+      console.log("maps initiated");
+     }
+   </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_API_KEY%&callback=initMap">
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
