--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,9 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <div id="map"></div>
-    <script>
-     function initMap() {
-      console.log("maps initiated");
-     }
-   </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_API_KEY%&libraries=places&callback=initMap">
+
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_API_KEY%&libraries=places">
     </script>
     <!--
       This HTML file is a template.
